--- a/style.css
+++ b/style.css
@@ -380,16 +380,17 @@ img {
   font-size: 100px;
   font-weight: 400;
   line-height: 40px;
+  color: var(--gp-scnd);
 }
 
 .gp-top-slider .gp-top-slider-single .gp-top-slider-content .gp-slider-title {
-  color: #fff;
+  color: white;
   font-size: 70px;
   line-height: 90px;
 }
 
 .gp-top-slider .gp-top-slider-single .gp-top-slider-content p {
-  color: #fff;
+  color: var(--gp-main);
   font-size: 20px;
   margin-bottom: 30px;
   margin-top: 10px;
@@ -757,10 +758,10 @@ img {
 /* RESERVATION SECTION */
 
 #gp-reservation {
-  background-color: #222;
+  background-color: white;
   display: inline;
   float: left;
-  padding: 100px 0;
+  padding: 50px 0;
   width: 100%;
 }
 
@@ -1481,10 +1482,6 @@ img {
   border-image: linear-gradient(90deg, transparent, var(--gp-main), transparent, var(--gp-main), transparent) 0% 0% 100% 0%;
 }
 
-.gp-menu-row:last-child {
-  border-bottom: 0px;
-}
-
 .gp-price {
   color: var(--gp-gray);
 }
@@ -1971,6 +1968,10 @@ img {
   .gp-contact-form .gp-send-btn {
     width: 100%;
   }
+
+  .cook-delecious .cook-content h4 {
+    font-size: 16px !important;
+  }
 }
 
 
@@ -2056,14 +2057,17 @@ section.cook-delecious {
 }
 
 .cook-delecious .cook-content h4 {
+  white-space: nowrap;
   font-size: 22px;
   font-weight: bold;
-  letter-spacing: 0.5px;
   text-transform: uppercase;
 }
 
 .cook-content .contact-content {
   border-radius: 16px;
+  border-width: 0px;
+  border-style: solid;
+  border-color: var(--gp-gray);
   background-color: rgba(255, 255, 255, 0.25);
   padding: 20px 30px;
 }
@@ -2119,7 +2123,7 @@ section.cook-delecious {
   .cook-delecious .first-image img {
     border-radius: 16px 16px 0px 0px;
   }
-  
+
   .cook-delecious .second-image img {
     border-radius: 0px 0px 16px 16px;
   }
