--- a/style.css
+++ b/style.css
@@ -395,6 +395,7 @@ img {
   margin-bottom: 30px;
   margin-top: 10px;
   padding: 0 30px;
+  font-style: italic;
 }
 
 .gp-top-slider .slick-prev::before {
