change some style

--- a/style.css
+++ b/style.css
@@ -1986,10 +1986,6 @@ img {
   .gp-contact-form .gp-send-btn {
     width: 100%;
   }
-
-  .cook-delecious .cook-content h4 {
-    font-size: 16px !important;
-  }
 }
 
 
@@ -2041,13 +2037,24 @@ img {
 
 /* LEFT - IMAGE - RIGHT */
 
-section.cook-delecious {
-  padding: 100px 0px;
+.gp-container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+section#cook-delecious {
+  background-color: white;
+  display: inline;
+  float: left;
+  padding: 50px 0;
+  width: 100%;
 }
 
 .cook-delecious .first-image {
   margin-right: -30px;
-  margin-top: 7.5%;
+  margin-top: 27%;
 }
 
 .cook-delecious .first-image img {
@@ -2058,7 +2065,7 @@ section.cook-delecious {
 
 .cook-delecious .second-image {
   margin-left: -30px;
-  margin-top: 7.5%;
+  margin-top: 27%;
 }
 
 .cook-delecious .second-image img {
@@ -2081,49 +2088,44 @@ section.cook-delecious {
   text-transform: uppercase;
 }
 
-.cook-content .contact-content {
-  border-radius: 16px;
-  border-width: 0px;
-  border-style: solid;
-  border-color: var(--gp-gray);
+.cook-delecious .cook-content h4.we-cook {
+  margin-bottom: 20px;
+}
+
+.cook-delecious .cook-content h4.we-send {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+.cook-content div>a {
+  white-space: nowrap;
+  display: block;
   background-color: rgba(255, 255, 255, 0.25);
-  padding: 20px 30px;
-}
-
-.cook-content .contact-content span {
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border: none;
-  width: auto;
-  height: auto;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.cook-content .contact-content h6 {
   color: white;
   margin-bottom: 16px;
   margin-top: 16px;
   font-size: 20px;
-  text-transform: uppercase;
   font-weight: bold;
-  letter-spacing: 0.5px;
+  padding: 4px 12px;
+  border-radius: 16px;
 }
 
-.cook-content span {
-  margin-top: 15px;
-  margin-bottom: 15px;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  border: 1px solid var(--gp-scnd);
-  width: 25px;
-  height: 25px;
-  display: inline-block;
-  line-height: 25px;
-  border-radius: 50%;
+.cook-content h6 {
+  margin-bottom: 0px;
+  font-size: 20px;
+  padding: 12px 20px;
 }
+
+.cook-content h6 a {
+  border-radius: 16px;
+  padding: 12px 20px;
+  color: white;
+  background-color: var(--gp-scnd);
+  margin-bottom: 0px;
+  font-size: 20px;
+  text-transform: uppercase;
+}
+
 
 @media (max-width: 991px) {
   .cook-delecious .first-image {
@@ -2164,10 +2166,35 @@ section.cook-delecious {
     margin-top: 0%;
     padding: 0px 10%;
   }
+}
 
-  .cook-content .contact-content h6 {
-    margin-bottom: 16px;
-    margin-top: 16px;
+@media (max-width: 425px) {
+
+  section#cook-delecious .cook-content,
+  section#cook-delecious .first-image,
+  section#cook-delecious .second-image {
+    margin-left: -45px;
+    margin-right: -45px;
+  }
+}
+
+@media (max-width: 360px) {
+  .cook-content h6 a {
+    padding: 12px 16px;
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  .cook-content h6 a {
+    padding: 12px 16px;
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 521px) and (max-width: 991.98px) {
+  section#cook-delecious .cook-content {
+    letter-spacing: 5px
   }
 }
 
@@ -2325,6 +2352,10 @@ section.cook-delecious {
   #mu-restaurant-menu .mu-restaurant-menu-area .mu-restaurant-menu-content .mu-restaurant-menu li a {
     font-size: 16px;
     margin: 0 3px;
+  }
+
+  .gp-menu-row>.gp-menu-more>span {
+    font-size: 24px;
   }
 }
 
