try solving bug

--- a/style.css
+++ b/style.css
@@ -532,6 +532,7 @@ img {
 
 .gp-about-us-left img {
   position: absolute;
+  left: 0;
   -webkit-transition: opacity 0.5s ease-in-out;
   -moz-transition: opacity 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out;
