--- a/style.css
+++ b/style.css
@@ -488,7 +488,7 @@ img {
   display: inline;
   float: left;
   width: 100%;
-  padding: 100px 0;
+  padding: 75px 0;
 }
 
 .gp-about-us-area {
@@ -502,7 +502,7 @@ img {
   float: left;
   margin-top: 20px;
   margin-bottom: 20px;
-  padding: 30px;
+  padding: 0 30px;
   width: 100%;
 }
 
@@ -527,6 +527,20 @@ img {
   display: inline;
   float: left;
   width: 100%;
+  height: 345px;
+}
+
+.gp-about-us-left img {
+  position: absolute;
+  left: 0;
+  -webkit-transition: opacity 1s ease-in-out;
+  -moz-transition: opacity 1s ease-in-out;
+  -o-transition: opacity 1s ease-in-out;
+  transition: opacity 1s ease-in-out;
+}
+
+.gp-about-us-left img.transparent {
+  opacity: 0;
 }
 
 .gp-title {
