--- a/style.css
+++ b/style.css
@@ -548,7 +548,7 @@ img {
   display: inline;
   float: left;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 16px;
   text-align: center;
 }
 
@@ -559,9 +559,10 @@ img {
 }
 
 .gp-title h2 {
-  color: #000;
-  font-size: 35px;
-  margin-bottom: 5px;
+  color: var(--gp-scnd);
+  font-family: "Leckerli One";
+  font-size: 48px;
+  margin-bottom: 16px;
 }
 
 /* COUNTER SECTION */
